--- a/Web/src/app/components/asset/asset-card/asset-card.component.html
+++ b/Web/src/app/components/asset/asset-card/asset-card.component.html
@@ -12,7 +12,7 @@
     </div>
   </div>
   <div class="ratings-distribution" fxLayout="row">
-    <recommendation-distribution [data]="asset.recommendationDistribution" [chartTitle]="'<b>'+asset.totalRatings+'</b><br />Ratings'"></recommendation-distribution>
+    <recommendation-distribution [data]="asset.recommendationDistribution" [showTitle]="'true'"></recommendation-distribution>
   </div>
   <div fxLayoutAlign="center center" class="general-recommendation-box" [class.neutral]="asset.mode==0" [class.moderate-buy]="asset.mode==1" [class.strong-buy]="asset.mode==2" [class.moderate-sell]="asset.mode==3" [class.strong-sell]="asset.mode==4" [class.close]="asset.mode==5">
     {{getGeneralRecommendation()}}
