--- a/Web/src/app/components/home/recommendation-box/recommendation-box.component.html
+++ b/Web/src/app/components/home/recommendation-box/recommendation-box.component.html
@@ -1,6 +1,6 @@
 
     <div class="recommendation-box" fxLayout="column">
-      <div class="box-title" [class.buy]="adviceType=='BUY'" [class.sell]="adviceType=='SELL'" [class.close]="adviceType=='CLOSE POSITION'">{{adviceType}}</div>
+      <div class="box-title" [class.buy]="adviceType=='BUY'" [class.sell]="adviceType=='SELL'" [class.close]="adviceType=='CLOSE'">{{adviceType}}</div>
       <table mat-table [dataSource]="adviceList" class="recommendation-table">
         <ng-container matColumnDef="assetCode">
           <th mat-header-cell *matHeaderCellDef> Asset </th>
@@ -20,7 +20,7 @@
               <div class="expert-rating">
                 <bar-rating [theme]="'fontawesome-o'" [readOnly]="'true'" [rate]="advice.advisorRanking" [title]="advice.advisorRanking | number: '1.2-2'"></bar-rating>
               </div>
-            {{advice.advisorName}} 
+            <span class="truncate" title="{{advice.advisorName}}">{{advice.advisorName}}</span>
           </td>
         </ng-container>
 
