--- a/Web/src/app/components/advisor/advisor-card/advisor-card.component.css
+++ b/Web/src/app/components/advisor/advisor-card/advisor-card.component.css
@@ -54,6 +54,8 @@
     text-align: center;
     color: #ffffff;
     font-weight: 500;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .expert-description{
@@ -61,6 +63,8 @@
     font-weight: 100;
     text-align: center;
     color: #e6e6e6;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .expert-rating{
