bug fix on query for feed

--- a/Web/src/app/components/asset/list-assets/list-assets.component.html
+++ b/Web/src/app/components/asset/list-assets/list-assets.component.html
@@ -17,6 +17,13 @@
             <div class="pagination-link" *ngIf="hasMoreAssets()" (click)="loadMoreAssets()">
                 LOAD MORE
             </div>
+            <div class="section-subtitle">
+                Disclaimer: Auctus Experts collects ratings and price targets of analysts by scanning publicly available 
+                reports on financial websites and by receiving reports directly from the analysts or from our users. 
+                The information displayed might not be accurate or up to date. The displayed ratings are made entirely at 
+                the sole discretion of the analysts. Auctus Experts holds no liability over the analysts’ information or opinions 
+                expressed on the site.
+            </div>
         </div>
         <trending-assets></trending-assets>
     </div>
