--- a/Web/src/app/components/advisor/become-advisor/become-advisor.component.html
+++ b/Web/src/app/components/advisor/become-advisor/become-advisor.component.html
@@ -1,6 +1,6 @@
 <div fxLayout="column" fxLayoutAlign="space-evenly center" fxLayoutGap="25px">
   <p *ngIf="alreadySent" class="already-sent">Your request was already submitted and it still is been evaluated by Auctus team.<br/>You can edit your information.</p>
-  <p>Please fill the form to resquest to be a Expert</p>
+  <p>Please fill the form to resquest to be an Expert</p>
   <div class="file-container" ngClass.xs="file-container-mobile" ngClass.sm="file-container-tablet" ngClass.gt-sm="file-container-web"> 
     <div class="file-uploader">
       <file-uploader #FileUploadComponent></file-uploader>
