--- a/Web/src/app/components/asset/asset-card/asset-card.component.css
+++ b/Web/src/app/components/asset/asset-card/asset-card.component.css
@@ -15,7 +15,7 @@
     font-size: 10px;
     font-weight: 300;
     line-height: 1.4;
-  letter-spacing: 0.3px;
+    letter-spacing: 0.3px;
     color: #ffffff;
     margin-bottom: 5px;
   }
@@ -59,56 +59,6 @@
     margin-right: 10px;
 }
 
-.variation{
-    width: 50px;
-    color: #ffffff;
-}
-
-.variation.bull{
-    color: #3ed142;
-}
-
-.variation.bear{
-    color: #d13e3e;
-}
-
-.arrow{
-    display: inline;
-}
-
-.general-recommendation-box{
-    height: 26px;
-    width: 163px;
-    font-size: 11px;
-    font-weight: 600;
-    line-height: 1.27;
-    letter-spacing: 0.3px;
-    text-align: center;
-    color: #ffffff;
-    margin-left: 35px;
-    margin-right: 35px;
-}
-
-.general-recommendation-box.neutral{
-    background-color: #999999;
-}
-
-.general-recommendation-box.moderate-buy{
-    background-color: #3ed142;
-}
-
-.general-recommendation-box.strong-buy{
-    background-color: #3ed142;
-}
-
-.general-recommendation-box.moderate-sell{
-    background-color: #d13e3e;
-}
-
-.general-recommendation-box.strong-sell{
-    background-color: #d13e3e;
-}
-
-.general-recommendation-box.close{
-    background-color: #999999;
+percentage-display {
+    width: 75px;
 }
