--- a/Web/src/app/components/home/recommendation-box/recommendation-box.component.css
+++ b/Web/src/app/components/home/recommendation-box/recommendation-box.component.css
@@ -76,16 +76,9 @@
 }
 
 .expert-rating{
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    /* -webkit-box-pack: center; */
-    -ms-flex-pack: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
     margin: 4px 0;
     font-size: 11px;
+    justify-content: left;
 }
 
 span.truncate{
