--- a/Web/src/app/components/recommendation-distribution/recommendation-distribution.component.html
+++ b/Web/src/app/components/recommendation-distribution/recommendation-distribution.component.html
@@ -1,6 +1,6 @@
 <div fxLayout="row">
     <div class="pie-chart" [chart]="pieChart"></div>
-    <div fxLayout="column" fxLayoutAlign="center start">
+    <div class="distribution-descripton" fxLayout="column" fxLayoutAlign="center start">
         <div class="buy">
             Buy: {{totalBuy}}
         </div>
