--- a/Web/src/app/components/asset/asset-details/asset-details.component.html
+++ b/Web/src/app/components/asset/asset-details/asset-details.component.html
@@ -66,7 +66,7 @@
         <ng-container matColumnDef="expertName">
           <th mat-header-cell *matHeaderCellDef> Expert </th>
           <td mat-cell *matCellDef="let assetAdvisor; let i = index"> 
-            <span class="truncate">{{asset.advisors[i].name}}</span>
+            <span class="truncate">{{getAdvisor(assetAdvisor.userId).name}}</span>
           </td>
         </ng-container>
       
@@ -74,7 +74,7 @@
           <th mat-header-cell *matHeaderCellDef> Ranking </th>
           <td mat-cell *matCellDef="let assetAdvisor; let i = index"> 
             <div class="expert-rating">
-              <bar-rating [theme]="'fontawesome-o'" [readOnly]="'true'" [rate]="asset.advisors[i].ranking" [title]="asset.advisors[i].ranking | number: '1.2-2'"></bar-rating>
+              <bar-rating [theme]="'fontawesome-o'" [readOnly]="'true'" [rate]="getAdvisor(assetAdvisor.userId).rating" [title]="getAdvisor(assetAdvisor.userId).rating | number: '1.2-2'"></bar-rating>
             </div>
           </td>
         </ng-container>
@@ -111,10 +111,10 @@
         <ng-container matColumnDef="followButton">
           <th mat-header-cell *matHeaderCellDef> </th>
           <td mat-cell *matCellDef="let assetAdvisor; let i = index">
-            <div class="white-button action-button-sm" *ngIf="asset.advisors[i].following" (click)="onUnfollowExpertClick($event, asset.advisors[i])">
+            <div class="white-button action-button-sm" *ngIf="getAdvisor(assetAdvisor.userId).following" (click)="onUnfollowExpertClick($event, getAdvisor(assetAdvisor.userId))">
               UNFOLLOW
             </div>
-            <div class="blue-button action-button-sm" *ngIf="!asset.advisors[i].following" (click)="onFollowExpertClick($event, asset.advisors[i])">
+            <div class="blue-button action-button-sm" *ngIf="!getAdvisor(assetAdvisor.userId).following" (click)="onFollowExpertClick($event, getAdvisor(assetAdvisor.userId))">
               FOLLOW
             </div>
           </td>
