--- a/Web/src/app/components/account/message-signature/message-signature.component.html
+++ b/Web/src/app/components/account/message-signature/message-signature.component.html
@@ -8,4 +8,4 @@
   Please unlock your account
 </div>
 
-<button (click)="becomeAdvisor()">BECOME EXPERT</button>
+<button (click)="becomeAdvisor()">BECOME AN EXPERT</button>
