--- a/Web/src/app/components/asset/asset-details/asset-details.component.css
+++ b/Web/src/app/components/asset/asset-details/asset-details.component.css
@@ -56,3 +56,13 @@
     margin-top: 46px;
     margin-bottom: 76px;
 }
+
+.pagination-link{
+    font-size: 14.5px;
+    font-weight: 500;
+    text-align: center;
+    color: #07d1ff;
+    text-decoration: underline;
+    cursor: pointer;
+    margin-bottom: 76px;
+}
