--- a/Web/src/app/components/asset/asset-details/asset-details.component.html
+++ b/Web/src/app/components/asset/asset-details/asset-details.component.html
@@ -20,10 +20,10 @@
           </div>
           <div fxLayout="column">
             <div class="recommendations">
-              {{asset.totalAdvisors}} experts recomend
+              {{getTotalAdvisorsSentence()}}
             </div>
             <div class="followers">
-              {{asset.numberOfFollowers}} investors are following
+              {{getFollowersSentence()}}
             </div>
           </div>
           <div fxLayout="column">
