--- a/Web/src/app/components/util/inheritance-input/inheritance-input.component.css
+++ b/Web/src/app/components/util/inheritance-input/inheritance-input.component.css
@@ -1,3 +1,11 @@
 .container-field {
     width: 100%;
 }
+
+:host ::ng-deep .mat-form-field-appearance-legacy .mat-form-field-underline {
+    background-color: #959595;
+}
+
+input::placeholder {
+    color: #959595;
+}
