--- a/Web/src/app/components/util/inheritance-input/inheritance-input.component.html
+++ b/Web/src/app/components/util/inheritance-input/inheritance-input.component.html
@@ -1,10 +1,11 @@
 <mat-form-field appearance="{{outlineField ? 'outline' : 'standard'}}" class="container-field" hideRequiredMarker>
-  <mat-label>{{placeholder}}</mat-label>
+  <mat-label [style.color]="darkLayout ? 'white' : '#101010'">{{placeholder}}</mat-label>
 
   <input matInput *ngIf="showTextField()"
     [type]="passwordHide ? 'password' : 'text'"
     [(ngModel)]="value" 
     [formControl]="formControl" 
+    [style.color]="darkLayout ? 'white' : '#101010'"
     placeholder="{{placeholder}}" 
     required="{{required}}" 
     readonly="{{disabled}}"
@@ -16,6 +17,7 @@
   <textarea matInput *ngIf="showTextAreaField() && autosizeTextArea"
     [(ngModel)]="value" 
     [formControl]="formControl" 
+    [style.color]="darkLayout ? 'white' : '#101010'"
     placeholder="{{placeholder}}" 
     required="{{required}}" 
     readonly="{{disabled}}"
@@ -30,6 +32,7 @@
   <textarea matInput *ngIf="showTextAreaField() && !autosizeTextArea"
     [(ngModel)]="value" 
     [formControl]="formControl" 
+    [style.color]="darkLayout ? 'white' : '#101010'"
     placeholder="{{placeholder}}" 
     required="{{required}}" 
     readonly="{{disabled}}"
